Revert "fix alignment of history message"
This reverts commit 3a0c7f2dfc48f43b8335db2ddb6ca2be516038a8.

--- a/src/components/History/_HistoryComponents.scss
+++ b/src/components/History/_HistoryComponents.scss
@@ -34,7 +34,7 @@
   .title-and-status {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     padding: 0px 18%;
 
     .title {
@@ -70,7 +70,6 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  margin: 0px 10px 10px;
 
   @include smaller-than(sm) {
     .people-and-operation {
@@ -102,7 +101,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   align-items: flex-start;
 
   > .type {
